# pyMaterial

./: .coveragerc  .gitignore  README.md  codecov.yml  pyproject.toml
.github/workflows/: publish.yaml  test.yml
pyMaterial/combis/clt/: stackup.py
pyMaterial/failure/: __init__.py  ifailure.py  maxstress.py
pyMaterial/materials/: __init__.py  anisotropic.py  material.py
pymaterial/combis/clt/: README.md  __init__.py  ply.py  stackup.py
pymaterial/failure/: __init__.py  cuntze.py  ifailure.py  maxstress.py  mises.py
pymaterial/failures/: cuntze.py  mises.py
pymaterial/materials/: __init__.py  anisotropic.py  isotropic.py  material.py  orthotropic.py  transversely_isotropic.py
tests/combis/clt/: test_stackup.py
tests/failure/: test_cuntze.py  test_max_stress.py  test_mises.py
tests/failures/: test_cuntze.py  test_max_stress.py  test_mises.py
tests/materials/: test_isotropic.py  test_orthotropic.py  test_transversal.py
