[tool.pdm]

[project]
name = "pymaterial"
version = "0.1.0"
description = "pyMaterial, library for material and failure modeling."
authors = [
    {name = "Willi Zschiebsch", email = "willi.zschiebsch@gmail.com"},
]
dependencies = [
    "numpy>=1.24.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.coverage.run]
parallel = true
source = [
    "tests",
    "pyMaterial"
]
