[tool.pdm]

[project]
name = "pymaterial"
version = "0.1.0"
description = "pyMaterial, library for material and failure modeling."
authors = [
    {name = "Willi Zschiebsch", email = "willi.zschiebsch@gmail.com"},
]
dependencies = [
    "numpy>=1.24.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]
test = [
    "coverage>=7.1.0",
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
]
pytest = [
    "coverage>=7.1.0",
]
pytest-cov = [
    "coverage>=7.1.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.coverage.run]
parallel = true
source = [
    "tests",
    "pyMaterial"
]
