[tool.pdm]

[project]
name = "pymaterial"
version = "0.1.6"
description = "pyMaterial, library for material and failure modeling."
authors = [
    {name = "Willi Zschiebsch", email = "willi.zschiebsch@gmail.com"},
]
dependencies = [
    "numpy>=1.24.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Source = "https://github.com/Modular-Design/pyMaterial"
Issues = "https://github.com/Modular-Design/pyMaterial/issues"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
]

[project.optional-dependencies]
all = ["pymaterial[test]"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
